support for docker with tar.gz install

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,64 +1,10 @@
 ---
 - name: "Download Logstash's rpm"
-  get_url:
-    url: "https://artifacts.elastic.co/downloads/logstash/logstash-{{ logstash_version }}-x86_64.rpm"
-    dest: "/tmp/logstash-{{ logstash_version }}-x86_64.rpm"
-  register: download_logstash
-  until: download_logstash is succeeded
+  when: ansible_facts.virtualization_type != "docker"
+  include: rpm.yml
 
-- name: Ensure Java is installed.
-  become: true
-  yum:
-    name: "java-1.8.0-openjdk"
-    state: present
-
-- name: Install Logstash
-  block:
-    - name: Install latest Logstash
-      become: true
-      yum:
-        name: "/tmp/logstash-{{ logstash_version }}-x86_64.rpm"
-        state: latest
-  rescue:
-    - name: Uninstall Logstash
-      become: true
-      yum:
-        name: "logstash"
-        state: removed
-    - name: Reinstall Logstash
-      become: true
-      yum:
-        name: "/tmp/logstash-{{ logstash_version }}-x86_64.rpm"
-        state: present
-
-- name: Configure startup options
-  become: true
-  template:
-    src: "startup.options.j2"
-    dest: "/etc/logstash/startup.options"
-    mode: 0644
-  notify: restart Logstash
-
-- name: Configure JVM options
-  become: true
-  template:
-    src: "jvm.options.j2"
-    dest: "/etc/logstash/jvm.options"
-    mode: 0644
-  notify: restart Logstash
-
-- name: Create startup scripts
-  become: true
-  command:
-    cmd: /usr/share/logstash/bin/system-install /etc/logstash/startup.options systemd
-  notify: restart Logstash
-
-- name: Create Logstash configuration files.
-  become: true
-  template:
-    src: "{{ item }}.j2"
-    dest: "/etc/logstash/conf.d/{{ item }}"
-    mode: 0644
-  with_items:
-    - simple_config.conf
-  notify: restart Logstash
+- name: Install Logstash tar.gz (on Docker)
+  when: ( ansible_connection == "community.docker.docker" )
+        or ( ansible_facts.env.container == "podman" )
+        or ( ansible_facts.virtualization_type == "docker" )
+  include: targz.yml
