--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,4 @@ logstash_elasticsearch_url: "http://localhost:9200"
 logstash_jvm_initial: "256m"
 logstash_jvm_maximum: "256m"
 logstash_java_opts: "-Xms{{ logstash_jvm_initial }} -Xmx{{ logstash_jvm_maximum }}"
+logstash_home: "/opt/logstash/{{ logstash_version }}"
