--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,13 +1,13 @@
 ---
   - src: git@github.com:run0ut/kibana-role.git
     scm: git
-    version: "1.3.0"
+    version: main
     name: kibana
   - src: git@github.com:run0ut/elastic-role.git
     scm: git
-    version: "1.2.0"
+    version: main
     name: elastic
   - src: git@github.com:run0ut/filebeat-role.git
     scm: git
-    version: "1.3.0"
+    version: main
     name: logstash
